--- a/content/data/population/mortality/index.Rmd
+++ b/content/data/population/mortality/index.Rmd
@@ -108,7 +108,7 @@ world_plot <- highchart() %>%
   hc_subtitle(text = paste("Historical and Projected,", min(world$year), "-", max(world$year))) %>%
   hc_caption(text = "Source: United Nations, Department of Economic and Social Affairs, Population Division (2022). World Population Prospects 2022.") %>%
   hc_exporting(enabled=TRUE) %>%
-  hc_tooltip(split=T) %>%
+  hc_tooltip(split=T, valueDecimals = 1) %>%
   hc_add_theme(p_theme())
 world_plot
 
@@ -120,7 +120,7 @@ continents_plot <- highchart() %>%
   hc_subtitle(text = paste("Historical and Projected,", min(continents$year), "-", max(continents$year))) %>%
   hc_caption(text = "Source: United Nations, Department of Economic and Social Affairs, Population Division (2022). World Population Prospects 2022.") %>%
   hc_exporting(enabled=TRUE) %>%
-  hc_tooltip(table=T, sort=T) %>%
+  hc_tooltip(table=T, sort=T, valueDecimals = 1) %>%
   hc_add_theme(p_theme()) 
 continents_plot
 
@@ -132,7 +132,7 @@ subcontinents_plot <- highchart() %>%
   hc_subtitle(text = paste("Historical and Projected,", min(subcontinents$year), "-", max(subcontinents$year))) %>%
   hc_caption(text = "Source: United Nations, Department of Economic and Social Affairs, Population Division (2022). World Population Prospects 2022.") %>%
   hc_exporting(enabled=TRUE) %>%
-  hc_tooltip(table=T, sort=T) %>%
+  hc_tooltip(table=T, sort=T, valueDecimals = 1) %>%
   hc_add_theme(p_theme()) 
 subcontinents_plot
 
@@ -144,7 +144,7 @@ regions_plot <- highchart() %>%
   hc_subtitle(text = paste("Historical and Projected,", min(regions$year), "-", max(regions$year))) %>%
   hc_caption(text = "Source: United Nations, Department of Economic and Social Affairs, Population Division (2022). World Population Prospects 2022.") %>%
   hc_exporting(enabled=TRUE) %>%
-  hc_tooltip(table=T, sort=T) %>%
+  hc_tooltip(table=T, sort=T, valueDecimals = 1) %>%
   hc_add_theme(p_theme()) 
 regions_plot
 
@@ -156,7 +156,7 @@ groups_plot <- highchart() %>%
   hc_subtitle(text = paste("Historical and Projected,", min(econ_groups$year), "-", max(econ_groups$year))) %>%
   hc_caption(text = "Source: United Nations, Department of Economic and Social Affairs, Population Division (2022). World Population Prospects 2022.") %>%
   hc_exporting(enabled=TRUE) %>%
-  hc_tooltip(table=T, sort=T) %>%
+  hc_tooltip(table=T, sort=T, valueDecimals = 1) %>%
   hc_add_theme(p_theme()) 
 groups_plot
 
@@ -168,7 +168,7 @@ le10_plot <- highchart() %>%
   hc_subtitle(text = paste("Historical and Projected,", min(le10$year), "-", max(le10$year))) %>%
   hc_caption(text = "Source: United Nations, Department of Economic and Social Affairs, Population Division (2022). World Population Prospects 2022.") %>%
   hc_exporting(enabled=TRUE) %>%
-  hc_tooltip(table=T, sort=T) %>%
+  hc_tooltip(table=T, sort=T, valueDecimals = 1) %>%
   hc_add_theme(p_theme()) 
 le10_plot
 
