--- a/content/about/index.Rmd
+++ b/content/about/index.Rmd
@@ -76,6 +76,8 @@ Protein is a topic of growing public interest. It is also a common theme of scie
 
 ### How to contribute
 
+We're building the protein industry's data dashboard and visualization encyclopedia, and you can too! It's 100% open source and entirely built using free tools and software. Anyone with basic knowledge of R and git can easily contribute.
+
 View the [readme on Github](https://github.com/proteinomics/proteinomics.org) to download the entire project or individual parts for local editing.
 
 <!--
